--- a/sabre-laser-match.html
+++ b/sabre-laser-match.html
@@ -15,8 +15,9 @@
         color: rgb(100, 200, 255);
         background-color: rgba(60,60,60);
         border-color: rgb(100, 200, 255);
-        border-radius: 5px;
-        margin: 10px;
+        border-width: 4px;
+        border-radius: 15px;
+        margin: 5px;
         padding: 10px;
       }
       button:disabled,
