split in classes

--- a/sabre-laser-match.html
+++ b/sabre-laser-match.html
@@ -5,78 +5,28 @@
     <meta charset="utf-8">
     <link rel="manifest" href="manifest.json" />
     <link rel="icon" type="image/svg+xml" href="images/light-sabers-couleur.svg" />
+    <link rel="stylesheet" href="style.css" />
     <title>Sabre laser - match</title>
-    <style>
-      .dark {
-        color: rgb(100, 200, 255);
-        background-color: rgba(30,30,30);
-      }
-      button {
-        color: rgb(100, 200, 255);
-        background-color: rgba(60,60,60);
-        border-color: rgb(100, 200, 255);
-        border-width: 4px;
-        border-radius: 15px;
-        margin: 5px;
-        padding: 10px;
-      }
-      button:disabled,
-      button[disabled],
-      button[disabled=disabled] {
-        border-color: rgb(30, 60, 75);
-      }
-      #historique img {
-        width: 20px;
-        height: 20px;
-      }
-      button img {
-        width: 30px;
-        height: 30px;
-      }
-      #scoreVert, #scoreRouge {
-        width: 40px;
-        font-size: 20px;
-        text-align: center;
-      }
-      .vertCombattant {
-        color: chartreuse;
-      }
-      .rougeCombattant {
-        color: red;
-      }
-      .blancCarton {
-        color: black;
-        background-color: white;
-      }
-      .jauneCarton {
-        color: black;
-        background-color: yellow;
-      }
-      .rougeCarton {
-        color: black;
-        background-color: red;
-      }
-      .noirCarton {
-        color: white;
-        background-color: black;
-      }
-      #restant {
-        font-size: 20px;
-      }
-      body {
-        text-align: center;
-      }
-    </style>
+    <script src="NodeUpdate.ts"></script>
+    <script src="Carton.ts"></script>
+    <script src="Touche.ts"></script>
+    <script src="Evenement.ts"></script>
+    <script src="regles.ts"></script>
+    <script src="Regle.ts"></script>
+    <script src="MatchStatus.ts"></script>
+    <script src="Match.ts"></script>
+    <script src="main.ts"></script>
   </head>
   <body class="dark">
   <span id="restant">00:00</span>
   <button id="start" onclick="start()"><img src="images/play.svg" alt="démarrer le combat" title="démarrer le combat" /></button>
   <button id="reset" onclick="reset()"><img src="images/light-sabers-blanc.svg" alt="Nouveau combat" title="Nouveau combat" /></button>
   <button onclick="annuler()"><img src="images/abort.svg" alt="Supprimer la dernière action" title="Supprimer la dernière action" /></button>
+  <!--  <div id="lightsaber"><span id="light"></span></div>-->
   <table style="width:100%">
     <thead>
       <tr>
-        <th id="message" colspan="2"></th>
+        <th id="message" colspan="2">Prêt?</th>
       </tr>
       <tr>
         <th><span class="vertCombattant">Vert</span></th>
@@ -126,305 +76,6 @@
   </table>
   <div id="historique"></div>
   <script>
-    class NodeUpdate {
-      static hasChanged(node1, node2) {
-        if (node1.nodeType !== node2.nodeType) return true;
-        if (node1.nodeName !== node2.nodeName) return true;
-        return node1.nodeType == Node.TEXT_NODE && node1.textContent !== node2.textContent;
-      }
-
-      static updateAttributes(oldNode, newNode) {
-        const attrToRm = oldNode.getAttributeNames().filter((attr) => newNode.getAttributeNames().indexOf(attr) === -1);
-        attrToRm.forEach((attr) => oldNode.removeAttribute(attr));
-
-        for (let i = 0; i < newNode.attributes.length; ++i) {
-          if (
-                  !oldNode.hasAttribute(newNode.attributes[i].name) ||
-                  oldNode.getAttribute(newNode.attributes[i].name) != newNode.attributes[i].value
-          ) {
-            oldNode.setAttribute(newNode.attributes[i].name, newNode.attributes[i].value);
-          }
-        }
-      }
-
-      static updateChildren(oldNode, newNode) {
-        const newNodeLength = newNode.childNodes.length;
-        const oldNodeLength = oldNode.childNodes.length;
-        const maxLength = Math.max(newNodeLength, oldNodeLength);
-        for (let i = 0; i < maxLength; i++) {
-          if (i >= oldNodeLength) {
-            try {
-              oldNode.appendChild(newNode.childNodes[i].cloneNode(true));
-            } catch (e) {
-              console.log(e);
-            }
-          } else if (i >= newNodeLength) {
-            oldNode.removeChild(oldNode.childNodes[newNodeLength]);
-          } else {
-            const oldChild = oldNode.childNodes[i];
-            const newChild = newNode.childNodes[i];
-            if (NodeUpdate.hasChanged(oldChild, newChild)) {
-              oldNode.replaceChild(newChild.cloneNode(true), oldChild);
-            } else {
-              NodeUpdate.updateChildren(oldChild, newChild);
-
-              if (oldChild instanceof HTMLElement && newChild instanceof HTMLElement) {
-                NodeUpdate.updateAttributes(oldChild, newChild);
-              }
-            }
-          }
-        }
-      }
-
-      static updateDiv(id, html) {
-        const oldDiv = document.getElementById(id);
-        if (oldDiv != null) {
-          const newDiv = document.createElement('div');
-          newDiv.innerHTML = html;
-          NodeUpdate.updateChildren(oldDiv, newDiv);
-        }
-      }
-    }
-
-    class Event {
-      temps;
-      combattant;
-      type;
-      nom;
-      constructor(temps, combattant, type, nom) {
-        this.temps = temps;
-        this.combattant = combattant;
-        this.type = type;
-        this.nom = nom;
-      }
-    }
-    const CARTONS = {
-      blanc: {
-        couleur: 'blanc',
-        points: 0,
-        image: "images/carton-blanc.svg",
-        cartonSuperieur: 'jaune',
-      },
-      jaune:{
-        couleur: 'jaune',
-        points: 3,
-        image: "images/carton-jaune.svg",
-        cartonSuperieur: 'rouge',
-      },
-      rouge:{
-        couleur: 'rouge',
-        points: 5,
-        image: "images/carton-rouge.svg",
-        cartonSuperieur: 'noir',
-      },
-      noir:{
-        couleur: 'noir',
-        points: 0,
-        image: "images/carton-noir.svg",
-        cartonSuperieur: 'noir',
-      }
-    };
-    const TOUCHES = {
-      main: {
-        points: 1,
-        image: "images/main.svg"
-      },
-      bras:{
-        points: 3,
-        image: "images/bras.svg"
-      },
-      jambe:{
-        points: 3,
-        image: "images/jambe.svg"
-      },
-      tronc:{
-        points: 5,
-        image: "images/tronc.svg"
-      },
-      tête:{
-        points: 5,
-        image: "images/tete.svg"
-      },
-    };
-    const duree = 180;
-    const prolongation = 30;
-    const mortSubiteScore = 10;
-    const scoreMax = 15;
-    let historique = [];
-    let time = 0;
-    let status = 'prêt'; // "prêt" "en cours" "pause" "fini"
-    function carton(carton, Combattant) {
-      historique.push(new Event(time, Combattant, 'carton', carton));
-      refresh();
-    }
-    function touche(type, Combattant) {
-      historique.push(new Event(time, Combattant, 'touche', type));
-      refresh();
-    }
-    function annuler() {
-      const event = historique.pop();
-      document.getElementById('message').innerHTML = "";
-      if (event && event.type === 'mort subite') {
-        historique.pop();
-      }
-      if (status === 'fini'){
-        status = "pause";
-      }
-      refresh();
-    }
-    function formatCombattant(combattant) {
-      return `<span class="${combattant}Combattant">${combattant}</span>`;
-    }
-    function formatCarton(carton) {
-      return `<img src="${CARTONS[carton].image}" alt="touche ${carton}" />`;
-    }
-    function formatTouche(touche) {
-      return `<img src="${TOUCHES[touche].image}" alt="touche ${touche}" />`;
-    }
-
-    function autreComabattant(combattant) {
-      return combattant === 'vert' ? 'rouge' : 'vert';
-    }
-    function cartonSuperieur(carton, nbCarton) {
-      if (nbCarton >= 2) {
-        return CARTONS[CARTONS[carton.nom].cartonSuperieur];
-      } else {
-        return CARTONS[carton.nom];
-      }
-    }
-    function calcScore(combattant) {
-      let score = historique
-        .filter(e => (e.combattant === combattant && e.type === 'touche'))
-        .map(e => TOUCHES[e.nom].points).reduce((a, b) => a + b, 0)
-      const cartons = historique.filter(e => (e.combattant === autreComabattant(combattant) && e.type === 'carton'));
-      let nbCarton = {blanc: 0, jaune: 0, rouge: 0, noir: 0};
-      for (let i = 0; i < cartons.length; i++) {
-        const carton = cartons[i];
-        nbCarton[carton.nom]++;
-        score += cartonSuperieur(carton, nbCarton[carton.nom]).points;
-      }
-      return score;
-    }
-    function updateTimer() {
-      if (status === "en cours") {
-        document.getElementById('start').innerHTML = '<img src="images/pause.svg" alt="mettre en pause le combat" />';
-      } else {
-        document.getElementById('start').innerHTML = '<img src="images/play.svg" alt="démarrer le combat" />';
-      }
-      document.getElementById('restant').innerText = formatTime(time);
-    }
-    function formatTime(time){
-      return pad0(Math.floor(time / 60)) + ":" + pad0(time % 60);
-    }
-    function getHistorique() {
-      let html = [];
-      let nbCarton = {blanc: 0, jaune: 0, rouge: 0, noir: 0};
-      for (let i = 0; i < historique.length; i++) {
-        const hist = historique[i];
-        const horodatage = `<span class="temps">[${formatTime(hist.temps)}]</span>`
-        const prefix =  `${horodatage} combattant ${formatCombattant(hist.combattant)}: `;
-        if (hist.type === 'carton') {
-          nbCarton[hist.nom]++;
-          if (nbCarton[hist.nom] >= 2) {
-            html.push(`<div>${prefix} ${nbCarton[hist.nom]}e ${hist.type} ${formatCarton(hist.nom)} --&gt; ${formatCarton(CARTONS[hist.nom].cartonSuperieur)}  (+${CARTONS[CARTONS[hist.nom].cartonSuperieur].points} combattant ${formatCombattant(autreComabattant(hist.combattant))})</div>`);
-          } else {
-            html.push(`<div>${prefix} ${nbCarton[hist.nom]}er ${hist.type} ${formatCarton(hist.nom)} (+${CARTONS[hist.nom].points} combattant ${formatCombattant(autreComabattant(hist.combattant))})</div>`);
-          }
-        } else if (hist.type === 'touche') {
-          html.push(`<div>${prefix} ${hist.type} ${formatTouche(hist.nom)} (+${TOUCHES[hist.nom].points})</div>`);
-        } else if (hist.type === 'mort subite') {
-          html.push(`<div>${horodatage} ${hist.type} ${hist.nom}</div>`);
-        }
-      }
-      return html.reverse().join('');
-    }
-
-    function refresh() {
-      NodeUpdate.updateDiv("historique", getHistorique());
-      document.getElementById('scoreVert').innerHTML = calcScore("vert");
-      document.getElementById('scoreRouge').innerHTML = calcScore("rouge");
-      activeButtons(status !== "prêt");
-      updateTimer();
-    }
-    function activeButtons(active) {
-      if (isMortSubite()){
-        const touches = document.querySelectorAll('.main,.bras,.jambe');
-        for (let i = 0; i < touches.length ; i++) {
-          touches[i].disabled = true;
-        }
-      } else {
-        const elems = document.querySelectorAll('.touche,.carton,.jambe');
-        for (let i = 0; i < elems.length ; i++) {
-          elems[i].disabled = !active;
-        }
-      }
-    }
-    function atInterval() {
-      if (calcScore("vert") >= scoreMax || calcScore("rouge") >= scoreMax) {
-        status = "fini";
-        document.getElementById('message').innerHTML = win();
-      } else if (time >= duree && calcScore("vert") !== calcScore("rouge")) {
-        status = "fini";
-        document.getElementById('message').innerHTML = win();
-      } else if (time >= duree && time <= (duree + prolongation) && calcScore("vert") === calcScore("rouge")) {
-        mortSubite(`Prolongation ${prolongation}s`);
-      } else if (time > (duree + prolongation)) {
-        status = "fini";
-        document.getElementById('message').innerHTML = win();
-      } else if (calcScore("vert") >= mortSubiteScore && calcScore("rouge") >= mortSubiteScore) {
-        mortSubite();
-      }
-      if (status === "en cours") {
-        time++;
-      }
-      refresh();
-    }
-    function isMortSubite() {
-      return historique.some(e => e.type === 'mort subite');
-    }
-    function isMortSubiteCause(cause="") {
-      return historique.some(e => e.type === 'mort subite' && e.nom === cause);
-    }
-    function mortSubite(cause="") {
-      if (!isMortSubiteCause(cause)) {
-        historique.push(new Event(time, "", 'mort subite', cause));
-      }
-      document.getElementById('message').innerHTML = "Mort subite! "+cause;
-    }
-    function win() {
-      if (calcScore("vert") > calcScore("rouge")) {
-        return `Le combattant ${formatCombattant("vert")} gagne le combat!`;
-      } else if (calcScore("rouge") > calcScore("vert")) {
-        return `Le combattant ${formatCombattant("rouge")} gagne le combat!`;
-      } else {
-        return `Combattants ex aequo!`;
-      }
-    }
-    function pad0(value) {
-      return value<10?'0'+value:value;
-    }
-    function reset() {
-      time = 0;
-      status = "prêt";
-      historique = [];
-      document.getElementById('message').innerHTML = "Prêt?";
-      refresh();
-    }
-    function start() {
-      if (status === "en cours") {
-        status = "pause";
-        document.getElementById('message').innerHTML = "Cessez!";
-      } else if (status === "pause" || status === "prêt") {
-        document.getElementById('message').innerHTML = "Combattez!";
-        status = "en cours";
-      } else if (status === "fini") {
-        time = 0;
-        status = "en cours";
-      }
-      refresh();
-    }
-    reset();
-    window.setInterval(atInterval, 1000);
   </script>
   </body>
 </html>
