--- a/sabre-laser-match.html
+++ b/sabre-laser-match.html
@@ -13,7 +13,7 @@
     <script src="Evenement.ts"></script>
     <script src="regles.ts"></script>
     <script src="Regle.ts"></script>
-    <script src="MatchStatus.ts"></script>
+    <script src="MatchState.ts"></script>
     <script src="Match.ts"></script>
     <script src="main.ts"></script>
   </head>
